integration_tests/tests/integration_tests/snapshots/integration_tests__token22_tests__t22_burn.snap
---
source: integration_tests/tests/integration_tests/token22_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "Aeg1zJKqECmspy5h9xMhp6VvtSjzW2acgBp2n4YjePkX",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://raw.githubusercontent.com/solana-developers/opos-asset/main/assets/DeveloperPortal/metadata.json",
    "files": [],
    "metadata": {
      "name": "OPOS",
      "symbol": "OPOS"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo",
      "scopes": [
        "metadata"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "Ei35sTUct2j1JcKc9HhuejGtFwBWZW7SVuRU6t95ugG5"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": true,
  "mint_extensions": {
    "metadata": {
      "uri": "https://raw.githubusercontent.com/solana-developers/opos-asset/main/assets/DeveloperPortal/metadata.json",
      "mint": "Aeg1zJKqECmspy5h9xMhp6VvtSjzW2acgBp2n4YjePkX",
      "name": "OPOS",
      "symbol": "OPOS",
      "update_authority": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo",
      "additional_metadata": []
    },
    "metadata_pointer": {
      "authority": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo",
      "metadata_address": "Aeg1zJKqECmspy5h9xMhp6VvtSjzW2acgBp2n4YjePkX"
    }
  },
  "token_info": {
    "supply": 1,
    "decimals": 0,
    "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "mint_authority": "TqooLmxeWzTkvjX43rvp9bxamgJaGET2nPmCNEfSdjo"
  }
}
