integration_tests/tests/integration_tests/snapshots/integration_tests__token22_tests__t22_get_assets_by_owner-nft.snap
---
source: integration_tests/tests/integration_tests/token22_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 2,
  "limit": 1000,
  "cursor": "A4zwKp4EGdPoKg8doYEdEzHnJ95k32bkoSfvs7XByZcb",
  "items": [
    {
      "interface": "V1_NFT",
      "id": "DVg4Y4ZEQ7EaiV2dwXZ21E7aWhizu6ZQ9ZA3jZd263Xb",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://bafybeiccixdciol2wtewh6v3vmr6byc6kmycdzxzqatdos2p676phdp6di.ipfs.dweb.link",
        "files": [],
        "metadata": {
          "name": "miaomiaomiao",
          "symbol": "miaomiaomiao"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "92ivrruXpkUh7zoDBWL1HbVJX8Hd16x5p6xxmdLBFimF",
          "scopes": [
            "metadata"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "ExA7MKcvVcQU39paNjpCQb7QQcg6QBm9uQbicwpKZZ3b"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false,
      "mint_extensions": {
        "metadata": {
          "uri": "https://bafybeiccixdciol2wtewh6v3vmr6byc6kmycdzxzqatdos2p676phdp6di.ipfs.dweb.link",
          "mint": "DVg4Y4ZEQ7EaiV2dwXZ21E7aWhizu6ZQ9ZA3jZd263Xb",
          "name": "miaomiaomiao",
          "symbol": "miaomiaomiao",
          "update_authority": "92ivrruXpkUh7zoDBWL1HbVJX8Hd16x5p6xxmdLBFimF",
          "additional_metadata": []
        },
        "metadata_pointer": {
          "authority": "92ivrruXpkUh7zoDBWL1HbVJX8Hd16x5p6xxmdLBFimF",
          "metadata_address": "DVg4Y4ZEQ7EaiV2dwXZ21E7aWhizu6ZQ9ZA3jZd263Xb"
        },
        "group_member_pointer": {
          "authority": "92ivrruXpkUh7zoDBWL1HbVJX8Hd16x5p6xxmdLBFimF",
          "member_address": "DVg4Y4ZEQ7EaiV2dwXZ21E7aWhizu6ZQ9ZA3jZd263Xb"
        }
      },
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
        "associated_token_address": "F51svAfxU5Zg6cE9LJ8xCcQayED2BvaYdUKEjLmJ5zPL"
      }
    },
    {
      "interface": "V1_NFT",
      "id": "A4zwKp4EGdPoKg8doYEdEzHnJ95k32bkoSfvs7XByZcb",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafkreibexsccso5u6ktnwpzoj3koq5lswclivgu6qurnzymwg2uw3lfbpy",
        "files": [],
        "metadata": {
          "name": "MFI.EXPERT PASS",
          "symbol": "",
          "token_standard": "NonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "2jsELa7xxBHXHu8LXup22JLNbxfgMDD2XctnsTaiSioF",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": true,
        "data_hash": "6VRpt5tdHFzajEBCwA2d9MuW8hgGbwnsyjABJi2MopZm",
        "creator_hash": "6SbfYyPsNhSwY1w4pDYwEf8hpESqjyKkDwDkWQMy8xFP",
        "asset_hash": "8n7PY3CQNzgWroERgSNajTGJ6APyHGkZbA93a1JjJZx5",
        "tree": "BMKVQA3WKmsT1r2tDaNLQgfGzhK6yneyWvwJsq3d36zx",
        "seq": 3912482,
        "leaf_id": 3911035
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "JAnKqTW1yMwvCrfXxV8JVnddg8yDGsRH2jdJrXpjtJPP"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [
        {
          "address": "3T1fQuahAAwNGLoVdbLLviJyMVetsLt1KqShWSnFEtS4",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "ExA7MKcvVcQU39paNjpCQb7QQcg6QBm9uQbicwpKZZ3b"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false
    }
  ]
}
