integration_tests/tests/integration_tests/snapshots/integration_tests__token22_tests__t22_get_assets_by_owner-show-fungible-false.snap
---
source: integration_tests/tests/integration_tests/token22_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 0,
  "limit": 1000,
  "items": []
}
